# lights-in-sync

./: Cargo.toml  README.md  flake.nix
src/: main.rs
src/comms/: mod.rs
src/config/: mod.rs
src/folder/: mod.rs
src/utils/: mod.rs
