[package]
name = "lights-in-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
toml = "0.9.8"
webpki-roots = "1.0.4"
